feat: center can experience on nameplates
